--- a/server/core/calculator/templates/calculator/calc.html
+++ b/server/core/calculator/templates/calculator/calc.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
 </head>
+
 <body>
     <h1>Calculator</h1>
+    <form method="post">
+        {% csrf_token %}
+        <input type="number" name="num1" placeholder=" Enter Number 1" required>
+        <select name="operation">
+            <option value="add">+</option>
+            <option value="subtract">-</option>
+            <option value="multiply">*</option>
+            <option value="divide">/</option>
+        </select>
+        <input type="number" name="num2" placeholder=" Enter Number 2" required>
+        <button type="submit">Calculate</button>
+    </form>
+
+    {% if res is not None %}
+    <h2>Result: {{ res }}</h2>
+    {% endif %}
 </body>
+
 </html>
