--- a/server/core/calculator/templates/calculator/calc.html
+++ b/server/core/calculator/templates/calculator/calc.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,9 +9,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body>
+
     <h1>Calculator</h1>
     <form method="post">
         {% csrf_token %}
@@ -19,8 +25,13 @@
             <option value="divide">/</option>
         </select>
         <input type="number" name="num2" placeholder=" Enter Number 2" required>
-        <button type="submit">Calculate</button>
+        <button class="normal-button submit-button" type="submit">Calculate</button>
     </form>
+    <br>
+    <a href="{% url 'qr' %}">
+        <button  class="normal-button" type="button">Go to Scan2say</button>
+    </a>
+
 
     {% if res is not None %}
     <h2>Result: {{ res }}</h2>
